Add results after running ch01.ipnyb

--- a/code/chap01ex.ipynb
+++ b/code/chap01ex.ipynb
@@ -73,7 +73,214 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>caseid</th>\n",
+       "      <th>pregordr</th>\n",
+       "      <th>howpreg_n</th>\n",
+       "      <th>howpreg_p</th>\n",
+       "      <th>moscurrp</th>\n",
+       "      <th>nowprgdk</th>\n",
+       "      <th>pregend1</th>\n",
+       "      <th>pregend2</th>\n",
+       "      <th>nbrnaliv</th>\n",
+       "      <th>multbrth</th>\n",
+       "      <th>...</th>\n",
+       "      <th>laborfor_i</th>\n",
+       "      <th>religion_i</th>\n",
+       "      <th>metro_i</th>\n",
+       "      <th>basewgt</th>\n",
+       "      <th>adj_mod_basewgt</th>\n",
+       "      <th>finalwgt</th>\n",
+       "      <th>secu_p</th>\n",
+       "      <th>sest</th>\n",
+       "      <th>cmintvw</th>\n",
+       "      <th>totalwgt_lb</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3410.389399</td>\n",
+       "      <td>3869.349602</td>\n",
+       "      <td>6448.271112</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8.8125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3410.389399</td>\n",
+       "      <td>3869.349602</td>\n",
+       "      <td>6448.271112</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.8750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7226.301740</td>\n",
+       "      <td>8567.549110</td>\n",
+       "      <td>12999.542264</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.1250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7226.301740</td>\n",
+       "      <td>8567.549110</td>\n",
+       "      <td>12999.542264</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7226.301740</td>\n",
+       "      <td>8567.549110</td>\n",
+       "      <td>12999.542264</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.1875</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 244 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   caseid  pregordr  howpreg_n  howpreg_p  moscurrp  nowprgdk  pregend1  \\\n",
+       "0       1         1        NaN        NaN       NaN       NaN       6.0   \n",
+       "1       1         2        NaN        NaN       NaN       NaN       6.0   \n",
+       "2       2         1        NaN        NaN       NaN       NaN       5.0   \n",
+       "3       2         2        NaN        NaN       NaN       NaN       6.0   \n",
+       "4       2         3        NaN        NaN       NaN       NaN       6.0   \n",
+       "\n",
+       "   pregend2  nbrnaliv  multbrth  ...  laborfor_i  religion_i  metro_i  \\\n",
+       "0       NaN       1.0       NaN  ...           0           0        0   \n",
+       "1       NaN       1.0       NaN  ...           0           0        0   \n",
+       "2       NaN       3.0       5.0  ...           0           0        0   \n",
+       "3       NaN       1.0       NaN  ...           0           0        0   \n",
+       "4       NaN       1.0       NaN  ...           0           0        0   \n",
+       "\n",
+       "       basewgt  adj_mod_basewgt      finalwgt  secu_p  sest  cmintvw  \\\n",
+       "0  3410.389399      3869.349602   6448.271112       2     9      NaN   \n",
+       "1  3410.389399      3869.349602   6448.271112       2     9      NaN   \n",
+       "2  7226.301740      8567.549110  12999.542264       2    12      NaN   \n",
+       "3  7226.301740      8567.549110  12999.542264       2    12      NaN   \n",
+       "4  7226.301740      8567.549110  12999.542264       2    12      NaN   \n",
+       "\n",
+       "   totalwgt_lb  \n",
+       "0       8.8125  \n",
+       "1       7.8750  \n",
+       "2       9.1250  \n",
+       "3       7.0000  \n",
+       "4       6.1875  \n",
+       "\n",
+       "[5 rows x 244 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "preg = nsfg.ReadFemPreg()\n",
     "preg.head()"
@@ -90,7 +297,23 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['caseid', 'pregordr', 'howpreg_n', 'howpreg_p', 'moscurrp', 'nowprgdk',\n",
+       "       'pregend1', 'pregend2', 'nbrnaliv', 'multbrth',\n",
+       "       ...\n",
+       "       'laborfor_i', 'religion_i', 'metro_i', 'basewgt', 'adj_mod_basewgt',\n",
+       "       'finalwgt', 'secu_p', 'sest', 'cmintvw', 'totalwgt_lb'],\n",
+       "      dtype='object', length=244)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "preg.columns"
    ]
@@ -106,7 +329,18 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'pregordr'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "preg.columns[1]"
    ]
@@ -122,7 +356,18 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.series.Series"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pregordr = preg['pregordr']\n",
     "type(pregordr)"
@@ -139,7 +384,29 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        1\n",
+       "1        2\n",
+       "2        1\n",
+       "3        2\n",
+       "4        3\n",
+       "        ..\n",
+       "13588    1\n",
+       "13589    2\n",
+       "13590    3\n",
+       "13591    4\n",
+       "13592    5\n",
+       "Name: pregordr, Length: 13593, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pregordr"
    ]
@@ -155,7 +422,18 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pregordr[0]"
    ]
@@ -171,7 +449,21 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2    1\n",
+       "3    2\n",
+       "4    3\n",
+       "Name: pregordr, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pregordr[2:5]"
    ]
@@ -203,7 +495,25 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "outcome\n",
+       "1    9148\n",
+       "2    1862\n",
+       "3     120\n",
+       "4    1921\n",
+       "5     190\n",
+       "6     352\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "preg.outcome.value_counts().sort_index()"
    ]
@@ -219,7 +529,35 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "birthwgt_lb\n",
+       "0.0        8\n",
+       "1.0       40\n",
+       "2.0       53\n",
+       "3.0       98\n",
+       "4.0      229\n",
+       "5.0      697\n",
+       "6.0     2223\n",
+       "7.0     3049\n",
+       "8.0     1889\n",
+       "9.0      623\n",
+       "10.0     132\n",
+       "11.0      26\n",
+       "12.0      10\n",
+       "13.0       3\n",
+       "14.0       3\n",
+       "15.0       1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "preg.birthwgt_lb.value_counts().sort_index()"
    ]
@@ -395,7 +733,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "resp[resp.caseid==2298]"
+    "resp[resp.caseid == 2298]"
    ]
   },
   {
@@ -411,7 +749,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "preg[preg.caseid==2298]"
+    "preg[preg.caseid == 2298]"
    ]
   },
   {
@@ -480,7 +818,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
